# easysam

./: .gitignore  AGENTS.md  CHANGELOG.md  CURSOR.md  GEMINI.md  LICENSE  README.md  pyproject.toml
.agent/rules/: python.md
.gemini/commands/: addreadme.toml  document.md
.github/workflows/: publish.yml
.hippo/: hippo.db  index.json  stats.json
.jules/: scrutineer.md
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  PRODUCTION_HARDENING.md  RESOURCE_REFERENCE.md  memories.md
docs/reports/: containers-initial.md
docs/superpowers/plans/: 2025-02-17-fix-failing-tests.md  (+4 more)
example/: README.md  resources.yaml
example/aoss/: README.md  resources.yaml
example/appwitherrors/: README.md  resources.yaml
example/conditionals/: README.md  deploy-contex.yaml  deploy-context.yaml  resources.yaml
example/customlayer/: README.md  resources.yaml
example/custompolicies/: README.md  resources.yaml
example/dynamottl/: README.md  resources.yaml
example/envvarsexpand/: .env  resources.yaml  template.yml
example/fargate-poller/: .gitignore  resources.yaml  template.yml
example/functionurl/: resources.yaml
example/kinesismutltiplebuckets/: README.md  deploy-contex.yaml  deploy-context.yaml  resources.yaml
example/multiregion/: README.md  on_eu_west_1.yaml  on_eu_west_2.yaml
example/myapp/: .gitignore  README.md  resources.yaml
example/onelambda/: README.md  resources.yaml
example/onelambda314/: .gitignore  README.md  resources.yaml
example/plugins/: .gitignore  README.md  customlambda.j2  resources.yaml
example/prismapydantic/: README.md  resources.yaml
example/prismarine/: .gitignore  README.md  resources.yaml
example/prismarineconditionals/: .gitignore  README.md  resources.yaml
example/prismarinettl/: .gitignore  README.md  resources.yaml
example/schedule/: README.md  resources.yaml  template.yml
example/userenvvars/: README.md  resources.yaml
scripts/: Deploy-Example.ps1  Test-Deploy-Example.ps1  test_examples_generation.py
skill/: SKILL.md
skill/references/: easysam-deploy-guide.md
src/easysam/: cli.py  cloud.py  commondep.py  definitions.py  deploy.py  generate.py  init.py  inspect.py  load.py  local_schemas.json  prismarine.py  schemas.json  swagger.j2  template.j2  utils.py  validate.py  validate_cloud.py  validate_schema.py
tests/: repro_task2.py  test_aoss.py  test_cli_flags.py  test_conditionals.py  test_customlayer.py  test_dynamottl.py  test_envvars_expansion.py  test_errors.py  test_function_url.py  test_gateway_cors.py  test_greedy_paths.py  test_init.py  test_kinesis_multiple_buckets.py  test_local_envvars.py  test_local_validation.py  test_myapp.py  test_onelambda.py  test_plugins.py  test_prismarine.py  test_prismarine_all.py  test_services.py  test_userenvvars.py
(+59 files in other folders)
