[project]
name = "easysam"
version = "1.1.0"
description = "Opinionated Modular Cloud Deployment Tool (EasySAM)"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aws-sam-cli>=1.138.0",
    "boto3>=1.38.15",
    "click>=8.2.0",
    "jinja2-cli[yaml]>=0.8.2",
    "prismarine>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/adsight-app/easysam"
Changelog = "https://github.com/adsight-app/easysam/blob/main/CHANGELOG.md"

[project.scripts]
easysam = "easysam.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/easysam"]

[dependency-groups]
dev = [
    "pip>=25.1.1",
    "twine>=6.1.0",
]
