[project]
name = "easysam"
version = "1.5.1"
description = "Opinionated Modular Cloud Deployment Tool (EasySAM)"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aws-sam-cli>=1.138.0",
    "boto3>=1.38.15",
    "click>=8.2.0",
    "jinja2-cli[yaml]>=0.8.2",
    "jsonschema>=4.23.0",
    "mergedeep>=1.3.4",
    "python-benedict[yaml]>=0.34.1",
    "rich>=13.9.4",
    "prismarine>=1.4.1",
]

[project.urls]
Homepage = "https://github.com/adsight-app/easysam"
Changelog = "https://github.com/adsight-app/easysam/blob/main/CHANGELOG.md"

[project.scripts]
easysam = "easysam.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/easysam"]

[dependency-groups]
dev = [
    "opensearch-py>=3.0.0",
    "pip>=25.1.1",
    "ruff>=0.14.1",
    "twine>=6.1.0",
]

[tool.ruff.format]
quote-style = "single"
