[project]
name = "easysam"
version = "1.11.0"
description = "Opinionated Modular Cloud Deployment Tool (EasySAM)"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aws-sam-cli>=1.155.2",
    "boto3>=1.40.6",
    "click==8.1.8",
    "jinja2-cli[yaml]>=0.8.2",
    "jsonschema>=4.23.0",
    "mergedeep>=1.3.4",
    "pip>=25.3",
    "prismarine>=1.5.4",
    "python-benedict[yaml]>=0.34.1",
    "python-dotenv>=1.2.2",
    "rich>=13.9.4",
]

[project.urls]
Homepage = "https://github.com/scartill/easysam"
Changelog = "https://github.com/scartill/easysam/blob/main/CHANGELOG.md"

[project.scripts]
easysam = "easysam.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/easysam"]

[dependency-groups]
dev = [
    "opensearch-py>=3.0.0",
    "ruff>=0.14.1",
    "pytest>=8.3.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "W"]

